# mlflow_dep_analyzer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  demo_smart_requirements.py  pyproject.toml  pytest.ini  test_model_loading.py
documentation/: requirements_analysis_walkthrough.md
examples/: demo_smart_requirements.py
examples/projects/inference/: __init__.py  model_inference.py
examples/projects/my_model/: auto_logging_sentiment_model.py  sentiment_model.py
examples/projects/shared_utils/: mlflow_hybrid_analyzer.py  text_utils.py  validation.py
examples/projects/shared_utils/databricks/: helpers.py
examples/tests/: conftest.py  test_auto_logging.py  test_integration.py  test_model_class_changes.py  test_model_independence.py
mlartifacts/0/1f0aba63f2914a7c997ffabd2f137580/artifacts/test_model/: MLmodel
mlartifacts/0/33ab6e4a012243e6a27eba53dd7fe829/artifacts/test_model/: MLmodel  requirements.txt
mlartifacts/0/343e8e4150cc477ead216ee90ddf7b23/artifacts/test_model_no_code/: MLmodel
mlartifacts/0/53cf789967d248b6aca4e8e92238e18e/artifacts/test_model_no_code/: MLmodel
mlartifacts/0/7622b1399a2f445aa6e1b5ea480301f7/artifacts/test_model_no_code/: MLmodel
mlartifacts/0/993383d771894309975809b3ef46a255/artifacts/test_model_no_code/: MLmodel
mlartifacts/0/b594a6ac3175428c9b22377ef5b6e56b/artifacts/test_model/: MLmodel
mlartifacts/0/ebd3ca74a7444f0ebca35f346ee75a0c/artifacts/test_model/: MLmodel
mlartifacts/648431859258078421/e74d479a917c4efdbeb514dad7e70698/artifacts/auto_sentiment_model/: MLmodel
mlartifacts/648431859258078421/ef883cc9a1584bd89d89d432694b7139/artifacts/auto_sentiment_model/: MLmodel
mlartifacts/809834883844165273/ab880d213f5d4294b12cfbca50c4edd1/artifacts/auto_sentiment_model/: MLmodel  conda.yaml
mlartifacts/809834883844165273/c68854493b6144fd9e4e36bc48615d52/artifacts/auto_sentiment_model/: MLmodel
notebooks/: train_auto_logging_model.py  train_model.py  train_sentiment_model.py
projects/my_model/: auto_logging_sentiment_model.py  sentiment_model.py
projects/shared_utils/: base_model.py  requirements_analyzer.py
projects/shared_utils/databricks/: helpers.py
src/: __init__.py
src/mlflow_code_analysis/: __init__.py  code_path_analyzer.py  requirements_analyzer.py
src/mlflow_dep_analyzer/: __init__.py  code_path_analyzer.py  requirements_analyzer.py  unified_analyzer.py
tests/: __init__.py  conftest.py  test_advanced_scenarios.py  test_auto_logging.py  test_code_path_analyzer.py  test_complex_scenarios.py  test_integration.py  test_model_independence.py  test_model_loading.py  test_requirements_analyzer.py  test_unified_analyzer_internals.py
tests/fixtures/: complex_project.py  lazy_imports.py  ml_frameworks.py  problematic_imports.py
(+7 files in other folders)
